fixed column alignment on public good cc story

--- a/immersive-stories/css/public-good.css
+++ b/immersive-stories/css/public-good.css
@@ -63,7 +63,7 @@
 }
 
 #half-columns-9 .right-column {
-	align-self: top;
+	align-self: start;
 }
 
 @media (max-width: 767px) {
